[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uploader"
version = "0.1.0"
description = "Centralized upload orchestration for media files"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "blake3>=0.3.0",
    "mediakit @ git+https://github.com/EdwinAlmendras/mediakit.git",
]

[project.optional-dependencies]
managed = [
    "mega-account @ git+https://github.com/EdwinAlmendras/mega-account.git",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


